--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -5,14 +5,31 @@
     box-sizing: border border-box;
 }
 
+:root{
+  --anchoCar:270px;
+  --anchoImg:45%;
+  --altoImg:57%;
+  --anchoBot:110px;
+  --altoBot:20px;
+  --tamFuen:13px;
+  --altCar:100%;
+  --paddignCar:5px;
+  --bordradiCar:10px;
+  --margenContenido:5px;
+  --margenIzBoton:10px;
+  --borRadiuBoton:10px;
+  --marginIzTitu:10px;
+  --colorFondo:white;
+}
+
 body{
-    font-size: 13px;
+    font-size: var(--tamFuen);
     font-family: "Titillium Web", sans-serif;
+    background-color: var(--colorFondo);
 }
 
 .contenedor{
     width: 1000px;
-    background-color: white;
     height: 360px;
     margin: 20px auto;
     padding: 10px;
@@ -21,39 +38,39 @@ body{
 }
 
 .card{
-    width: 270px;
-    height: 100%;
+    width: var(--anchoCar);
+    height: var(--altCar);
     margin: 0 auto;
     background-color: rgb(186, 219, 230);
     display: inline-block;
-    padding: 5px;
+    padding: var(--paddignCar);
     margin: 0px 10px 0px 10px;
     text-align: left;
-    border-radius: 10px;
+    border-radius: var(--bordradiCar);
     box-shadow: 0px 0px 5px black;
 }
 
 .imagen{
     display: block;
-    width: 45%;
-    height: 57%;
+    width: var(--anchoImg);
+    height: var(--altoImg);
     filter: drop-shadow(0px 0px 8px #000);
     text-align: center;
     margin: 5px auto;
 }
 
 .contenido{
-    margin: 5px;
+    margin: var(--margenContenido);
 }
 
 .boton{
     text-decoration: none;
     display: block;
-    margin-left: 10px;
-    width: 110px;
-    height: 20px;
+    margin-left: var(--margenIzBoton);
+    width: var(--anchoBot);
+    height: var(--altoBot);
     background-color: rgb(255, 253, 240) ;
-    border-radius: 5px;
+    border-radius: var(--borRadiuBoton);
     text-align: center;
     margin-bottom:  10px; ;
     margin: 0 auto;
@@ -62,5 +79,5 @@ body{
 }
 
 .titulo{
-    margin-left: 10px;
+    margin-left: var(--marginIzTitu);
 }
